--- a/index.htm
+++ b/index.htm
@@ -266,7 +266,7 @@
     <!-- footer section start -->
 
     <footer>
-        <span>Created by <a href=#>Kartik Shah</a> | <span class="fas fa-copyright"></span> 2021 All rights reserved. </span>
+        <span>Created by <a href="http://github.com/kartik9807?tab=respositories">Kartik Shah</a> | <span class="fas fa-copyright"></span> 2021 All rights reserved. </span>
     </footer>
 
     <script src="java.js"></script>
