--- a/index.htm
+++ b/index.htm
@@ -21,6 +21,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
 </head>
 <body>
+    
+<!--     scroll up btn stying -->
     <div class="scroll-up-btn">
         <i class="fas fa-angle-up"></i>
     </div>
