--- a/index.htm
+++ b/index.htm
@@ -54,7 +54,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Kartik Shah</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="#">Hire me</a>
+                <a href="#contact">Hire me</a>
             </div>
         </div>
     </section>
