--- a/index.htm
+++ b/index.htm
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My website</title>
     <link rel="stylesheet" href="style.css">
+    <!-- logo -->
     <link rel="icon" href="images/logo.webp">        
     <!-- font awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css">
@@ -22,7 +23,8 @@
 </head>
 <body>
     
-<!--     scroll up btn stying -->
+    <!-- scroll btn -->
+    
     <div class="scroll-up-btn">
         <i class="fas fa-angle-up"></i>
     </div>
@@ -35,10 +37,10 @@
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
-                <li><a href="#services" class="menu-btn">Services</a></li>
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
                 <li><a href="#teams" class="menu-btn">Teams</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
+                <li><a href="#Footer" class="menu-btn">Footer</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -54,7 +56,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Kartik Shah</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="#contact">Hire me</a>
+                <a href="#">Hire me</a>
             </div>
         </div>
     </section>
@@ -70,14 +72,14 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Kartik and I'm a <span class="typing-2"></span></div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</p>
+                    <p>I am website developer and Python programer.</p> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</p>
                     <a href="#">Download CV</a>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- services section start -->
+    <!-- services section start
 
     <section class="services" id="services">
         <div class="max-width">
@@ -106,7 +108,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- skill section start  -->
 
@@ -168,38 +170,38 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-1.jpeg" alt="">
+                        <img src="images/profile-1.jpeg" alt="logo">
                         <div class="text">Kartik Shah</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p>I am website developer and Python programer.</p>
                     </div>
                 </div>
                 <div class="card">
                         <div class="box">
-                            <img src="images/profile-4.jpeg" alt="">
+                            <img src="images/profile-4.jpeg" alt="logo">
                             <div class="text">Shivang Shah</div>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <p>I am website developer and C++ programer.</p>
                         </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-2.jpeg" alt="">
+                        <img src="images/profile-2.jpeg" alt="logo">
                         <div class="text">Kushagara Gupta</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p>I am website developer and Java programer.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-3.jpeg" alt="">
+                        <img src="images/profile-3.jpeg" alt="logo">
                         <div class="text">Khushbu patel</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p>I am website developer and PHP programer.</p>
                     </div>
                 </div>
 
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-5.jpeg" alt="">
+                        <img src="images/profile-5.jpeg" alt="logo">
                         <div class="text">Ayushi Gupta</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p>I am website developer and MySQL programer.</p>
                     </div>
                 </div>
             </div>
@@ -267,8 +269,8 @@
 
     <!-- footer section start -->
 
-    <footer>
-        <span>Created by <a href="http://github.com/kartik9807?tab=respositories">Kartik Shah</a> | <span class="fas fa-copyright"></span> 2021 All rights reserved. </span>
+    <footer id=Footer>
+        <span>Created by <a href="https://github.com/kartik9807">Kartik Shah</a> | <span class="fas fa-copyright"></span> 2021 All rights reserved. </span>
     </footer>
 
     <script src="java.js"></script>
