--- a/index.htm
+++ b/index.htm
@@ -118,7 +118,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto repellat fuga a odit facere expedita sequi blanditiis odio sit atque laboriosam ea dolorum laborum aliquam porro, tenetur labore consequatur nam dicta itaque cumque repellendus ipsam quas minus! Earum nihil porro nostrum error similique reiciendis eius ratione. Quas cupiditate aliquid, in quaerat magnam repudiandae provident facilis, quasi dolorum beatae nostrum dolores!</p>
+                    <p>I am website developer and Python programer.</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto repellat fuga a odit facere expedita sequi blanditiis odio sit atque laboriosam ea dolorum laborum aliquam porro, tenetur labore consequatur nam dicta itaque cumque repellendus ipsam quas minus! Earum nihil porro nostrum error similique reiciendis eius ratione. Quas cupiditate aliquid, in quaerat magnam repudiandae provident facilis, quasi dolorum beatae nostrum dolores!</p>
                     <a href="">Read more</a>
                 </div>
                 <div class="column right">
@@ -216,7 +216,7 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat consequatur autem aperiam at sit ex voluptatum odio sunt laborum blanditiis!</p>
+                    <p>I am website developer and Python programer.</p><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat consequatur autem aperiam at sit ex voluptatum odio sunt laborum blanditiis!</p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
