--- a/index.htm
+++ b/index.htm
@@ -273,63 +273,66 @@
 
     <!-- footer section start -->
 
-        <footer id="Footer">
-      <div class="main-content">
-        <div class="left box">
-          <h2>About us</h2>
-          <div class="content">
-            <p><a href="">KartikShah</a> is a YouTube channel where you can learn web designing, web development, ui/ux designing, html css tutorial, hover animation and effects, javascript and jquery tutorial and related so on.</p>
-            <div class="social">
-              <a href="#"><span class="fab fa-facebook-f"></span></a>
-              <a href="#"><span class="fab fa-twitter"></span></a>
-              <a href="#"><span class="fab fa-instagram"></span></a>
-              <a href="#"><span class="fab fa-youtube"></span></a>
-            </div>
-          </div>
-        </div>
-
-        <div class="center box">
-          <h2>Address</h2>
-          <div class="content">
-            <div class="place">
-              <span class="fas fa-map-marker-alt"></span>
-              <span class="text">Nandanvan, Nagpur</span>
-            </div>
-            <div class="phone">
-              <span class="fas fa-phone alt"></span>
-              <span class="text">9503132449</span>
-            </div>
-            <div class="email">
-              <span class="fas fa-envelope"></span>
-              <span class="text">abc@example.com</span>
-            </div>
-          </div>
-        </div>
-
-        <div class="right box">
-          <h2>Contact us</h2>
-          <div class="content">
-            <form action="#">
-              <div class="email">
-                <div class="text">Email</div>
-                <input type="email" placeholder="Email" required></div>
-              <div class="msg">
-                <div class="text">Message</div>
-                <textarea cols="3" rows="3" placeholder="Message" required></textarea>
+    <footer id="Footer">
+        <div class="max-width">
+          <div class="main-content">
+            <div class="left box">
+              <h2>About us</h2>
+              <div class="content">
+                <p><a href="">KartikShah</a> is a YouTube channel where you can learn web designing, web development, ui/ux designing, html css tutorial, hover animation and effects, javascript and jquery tutorial and related so on.</p>
+                <div class="social">
+                  <a href="#"><span class="fab fa-facebook-f"></span></a>
+                  <a href="#"><span class="fab fa-twitter"></span></a>
+                  <a href="#"><span class="fab fa-instagram"></span></a>
+                  <a href="#"><span class="fab fa-youtube"></span></a>
+                </div>
               </div>
-              <div class="btn">
-                <button type="submit">Send message</button>
+            </div>
+
+            <div class="center box">
+              <h2>Address</h2>
+              <div class="content">
+                <div class="place">
+                  <span class="fas fa-map-marker-alt"></span>
+                  <span class="text">Nandanvan, Nagpur</span>
+                </div>
+                <div class="phone">
+                  <span class="fas fa-phone alt"></span>
+                  <span class="text">9503132449</span>
+                </div>
+                <div class="email">
+                  <span class="fas fa-envelope"></span>
+                  <span class="text">abc@example.com</span>
+                </div>
               </div>
-            </form>
+            </div>
+
+            <div class="right box">
+              <h2>Contact us</h2>
+              <div class="content">
+                <form action="#">
+                  <div class="email">
+                    <div class="text">Email</div>
+                        <input type="email" placeholder="Email" required>
+                  </div>
+                  <div class="msg">
+                    <div class="text">Message</div>
+                    <textarea cols="3" rows="3" placeholder="Message" required></textarea>
+                  </div>
+                  <div class="btn">
+                    <button type="submit">Send message</button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+          <div class="bottom">
+            <center>
+              <span class="credit">Created By <a href="https://github.com/kartik9807">Kartik Shah</a> | </span>
+              <span class="far fa-copyright"></span><span> 2021 All rights reserved.</span>
+            </center>
           </div>
         </div>
-      </div>
-      <div class="bottom">
-        <center>
-          <span class="credit">Created By <a href="https://github.com/kartik9807">Kartik Shah</a> | </span>
-          <span class="far fa-copyright"></span><span> 2021 All rights reserved.</span>
-        </center>
-      </div>
     </footer>
 
 
