--- a/index.htm
+++ b/index.htm
@@ -328,7 +328,7 @@
           </div>
           <div class="bottom">
             <center>
-              <span class="credit">Created By <a href="https://github.com/kartik9807">Kartik Shah</a> | </span>
+              <span class="credit">Created By <a href="https://github.com/kartik9807" target="_blank">Kartik Shah</a> | </span>
               <span class="far fa-copyright"></span><span> 2021 All rights reserved.</span>
             </center>
           </div>
