--- a/index.htm
+++ b/index.htm
@@ -47,11 +47,16 @@
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
+                <li><a href="#services" class="menu-btn">Services</a></li>
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
                 <li><a href="#teams" class="menu-btn">Teams</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
-                <li><a href="#Footer" class="menu-btn">Footer</a></li>
             </ul>
+            <div class="media-icons">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+            </div>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
             </div>
@@ -90,35 +95,58 @@
     </section>
 
     <!-- services section start -->
-<!-- 
+
     <section class="services" id="services">
         <div class="max-width">
-            <h2 class="title">My services</h2>
-            <div class="serv-content">
-                <div class="card">
-                    <div class="box">
-                        <i class="fas fa-paint-brush"></i>
-                        <div class="text">Web Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores architecto asperiores at. Voluptatum, assumenda modi.</p>
+            <div class="content">
+             <div class="title">My Services</div>
+             <div class="boxes">
+                <div class="box">
+                    <div class="icon">
+                        <i class="fas fa-desktop"></i>
                     </div>
+               <div class="topic">Web Devlopment</div>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem eligendi?</p>
                 </div>
-                <div class="card">
-                    <div class="box">
-                        <i class="fas fa-chart-line"></i>
-                        <div class="text">Advertising</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores architecto asperiores at. Voluptatum, assumenda modi.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <i class="fas fa-code"></i>
-                        <div class="text">Apps Designs</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores architecto asperiores at. Voluptatum, assumenda modi.</p>
-                    </div>
-                </div>
-            </div>
+               <div class="box">
+                 <div class="icon">
+                   <i class="fas fa-paint-brush"></i>
+               </div>
+               <div class="topic">Graphic Design</div>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem eligendi?</p>
+             </div>
+               <div class="box">
+                 <div class="icon">
+                   <i class="fas fa-chart-line"></i>
+               </div>
+               <div class="topic">Digital Marketing</div>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem eligendi?</p>
+             </div>
+               <div class="box">
+                 <div class="icon">
+                   <i class="fab fa-android"></i>
+               </div>
+               <div class="topic">Icon Design</div>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem eligendi?</p>
+             </div>
+               <div class="box">
+                 <div class="icon">
+                   <i class="fas fa-camera-retro"></i>
+               </div>
+               <div class="topic">Photography</div>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem eligendi?</p>
+             </div>
+               <div class="box">
+                 <div class="icon">
+                   <i class="fas fa-tablet-alt"></i>
+               </div>
+               <div class="topic">Apps Devlopment</div>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem eligendi?</p>
+             </div>
+           </div>
+           </div>
         </div>
-    </section> -->
+    </section>
 
     <!-- skill section start  -->
 
@@ -355,8 +383,8 @@
         }
     </script>
     
-
     <script src="java.js"></script>
+
 </body>
 </html>
 
